Wrong fullscreen size on notched 14" MacBook Pro

Using the "legacy" fullscreen mode on the new notched MacBook Pro 14" (and likely the bigger one as well) results in the video displaying at the wrong size, likely because the fullscreen is shrinked to fit below the notch.

vlc

Originally reported on this forum thread.