macosx: Support safe area of new M1 macs for VLC fullscreen

New M1 Macs contain a notch, covering part of the screen. Analog to
the Quicktime player, when implementing VLCs internal fullscreen,
the video is scaled inside the safe area of the notch only, leaving
the top area black.

Fixes #26291